# tilebased_game

./: .clang-format  .gitignore  CMakeLists.txt  asset_format.md  assettypes.md
assets/: simple_bundle.json
assets/render/: sample_pipeline_layout.json  standard_vertex.json
assets/shaders/: main.frag  main.vert  sample_linked_shader.json
assets/shaders/unlinked/: main.frag.json  main.vert.json
src/game/: game.cpp  game.hpp  render.cpp  render.hpp  utils.hpp  window.cpp  window.hpp
src/game/asset/: asset.cpp  asset.hpp  asset_bundle.cpp  asset_bundle.hpp  asset_loader.cpp  asset_loader.hpp  asset_manager.cpp  asset_manager.hpp  common_parse.cpp  common_parse.hpp
src/game/render/: allocator.cpp  allocator.hpp  frame_manager.cpp  frame_manager.hpp  pipeline_layout.cpp  pipeline_layout.hpp  render.hpp  render_device.cpp  render_device.hpp  render_surface.cpp  render_surface.hpp  render_system.cpp  render_system.hpp  shader_object.cpp  shader_object.hpp  single_time_commands.cpp  single_time_commands.hpp
